--- a/Grading/lab-03.html
+++ b/Grading/lab-03.html
@@ -5,177 +5,60 @@
   </head>
   <body>
     <h1>Lab 03 - Graded Solution</h1>
-    <p><b>You scored 0% = 0.0 points for this lab.</b></p>
+    <p><b>You scored 100% = 3.0 points for this lab.</b></p>
     <ul>
       <li><b>Sort ints</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.137 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 0.102 sec</Li>
       </ul>
       </li>
       <li><b>Sort strings based on their last character</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.134 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 0.103 sec</Li>
       </ul>
       </li>
       <li><b>Sort students on their GPA</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.118 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 0.103 sec</Li>
       </ul>
       </li>
       <li><b>Binary search for ints</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.137 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 0.102 sec</Li>
       </ul>
       </li>
       <li><b>Binary search for students by GPA</b>
       <ul>
       <li>Grade Percentage: 6</li>
-      <li>Your solution failed this test case! taking 0.117 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 0.104 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in hello world</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.134 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 0.104 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in Moby Dick</b>
       <ul>
       <li>Grade Percentage: 15</li>
-      <li>Your solution failed this test case! taking 0.132 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 1.394 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in hello world using suffix array</b>
       <ul>
       <li>Grade Percentage: 20</li>
-      <li>Your solution failed this test case! taking 0.142 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 0.082 sec</Li>
       </ul>
       </li>
       <li><b>Search for substrings in Moby Dick using suffix array</b>
       <ul>
       <li>Grade Percentage: 20</li>
-      <li>Your solution failed this test case! taking 0.139 sec</Li>
-<li><pre>TabError: inconsistent use of tabs and spaces in indentation (<tested-program>, line 21)</pre></li>
-<li><pre>Traceback (most recent call last):
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/execution_base.py", line 60, in call_test_function
-    test_function(
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/core.py", line 47, in wrapper
-    raise module.caughtException
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 38, in run
-    self._exec_code()
-  File "/Users/lord_pretzel/.pyenv/versions/3.9.0/lib/python3.9/site-packages/grader-0.0.1-py3.9.egg/grader/program_container.py", line 53, in _exec_code
-    code = compile(source, "<tested-program>", "exec", dont_inherit=True)
-  File "<tested-program>", line 21
-TabError: inconsistent use of tabs and spaces in indentation
-</pre></li>
+      <li>Your solution succeeded taking 1.996 sec</Li>
       </ul>
       </li>
     </ul>
